* decoder:
  - vorbis, flac, opus: honor DESCRIPTION= tag in Xiph-based files as a comment to the song
  - audiofile: support scanning remote files
  - audiofile: log libaudiofile errors
  - dsdiff, dsf: report bit rate
  - dsdiff, dsf: implement seeking
  - dsf: support DSD512
  - dsf: support multi-channel files
  - dsf: fix big-endian bugs
  - dsf: fix noise at end of malformed file
  - sndfile: support scanning remote files
  - sndfile: support tags "comment", "album", "track", "genre"
  - sndfile: native floating point playback
  - sndfile: optimized 16 bit playback
  - mp4v2: support playback of MP4 files.
* encoder:
  - shine: new encoder plugin
* output
  - alsa: support native DSD playback
  - alsa: rename "DSD over USB" to "DoP"
* threads:
  - the update thread runs at "idle" priority
  - the output thread runs at "real-time" priority
  - increase kernel timer slack on Linux
  - name each thread (for debugging)
* configuration
  - allow playlist directory without music directory
  - use XDG to auto-detect "music_directory" and "db_file"
* new resampler option using libsoxr
* ARM NEON optimizations
* install systemd unit for socket activation
* Android port

ver 0.18.15 (not yet released)
* command
  - list: reset used size after the list has been processed
* fix MixRamp
* work around build failure on NetBSD

ver 0.18.14 (2014/09/11)
* protocol
  - fix range parser bug on certain 32 bit architectures
* decoder
  - audiofile: fix crash after seeking
  - ffmpeg: fix crash with ffmpeg/libav version 11
  - fix assertion failure after seeking

ver 0.18.13 (2014/08/31)
* protocol
  - don't change song on "seekcur" in random mode

* decoder
  - dsdiff, dsf: fix endless loop on malformed file
  - ffmpeg: support ffmpeg/libav version 11
  - gme: fix song duration
* output
  - alsa: fix endless loop at end of file in dsd_usb mode
* fix state file saver
* fix build failure on Darwin

ver 0.18.12 (2014/07/30)
* database